<resources>
    <string name="app_name">To Do List APP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="MainTitulo">Listas \"To Do\"</string>
    <string name="ButtonAddLista">Add Lista</string>
    <string name="MainTituloTarefa">Tarefas</string>
    <string name="AddTarefa">Adicionar Tarefa</string>
    <string name="ExcluirLista">Excluir lista atual</string>
    <string name="TituloDetalheTar">Detalhes da Tarefa</string>
    <string name="BtExcluirTarefa">Excluir tarefa</string>
    <string name="BtEditarTarefa">Editar Tarefa</string>
    <string name="PlaceholderNomeDaLista">Digite o nome da lista</string>
    <string name="HintHora">Hora de Fim</string>
    <string name="HintNomeTarefa">Nome da Tarefa...</string>
    <string name="HintDescrevaAqui">Descreva aqui a tarefa...</string>
    <string name="HintDatadeFim">Data de Fim</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>
</resources>
