<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.victor.todolistapp.TarefaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewMainTarefa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/MainTituloTarefa"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="193dp"
            android:orientation="vertical">

            <ListView
                android:id="@+id/ListViewTarefas"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <EditText
            android:id="@+id/NomeDaTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/HintNomeTarefa"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/DescricaoTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/HintDescrevaAqui"
            android:inputType="textMultiLine" />

        <EditText
            android:id="@+id/DataFim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/HintDatadeFim"
            android:inputType="date" />

        <EditText
            android:id="@+id/HoraFim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/HintHora"
            android:inputType="time" />

        <Button
            android:id="@+id/buttonAddTarefa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="novaTarefa"
            android:text="@string/AddTarefa" />

        <Button
            android:id="@+id/buttonExcluirLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="excluirLista"
            android:text="@string/ExcluirLista" />

    </LinearLayout>

</android.widget.LinearLayout>
