<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.victor.todolistapp.DetalheTarefaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTituloDetalheTar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:text="@string/TituloDetalheTar" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonEditarTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Button"
        tools:text="@string/BtEditarTarefa" />

    <Button
        android:id="@+id/buttonExcluirTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Button"
        tools:text="@string/BtExcluirTarefa" />

    <EditText
        android:id="@+id/DataTarefa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

</android.widget.LinearLayout>
