<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.victor.todolistapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewMainLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MainTitulo"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/ListViewListas"
                android:layout_width="match_parent"
                android:layout_height="323dp"
                tools:ignore="NestedScrolling">

            </ListView>
        </LinearLayout>

        <EditText
            android:id="@+id/NomeDaLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PlaceholderNomeDaLista"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="adicionarLista"
            android:text="@string/ButtonAddLista" />

    </LinearLayout>

</android.widget.LinearLayout>
